# IFJ18

./: BSTsymtable.c  BSTsymtable.h  CMakeLists.txt  Grammar,txt  Grammar.txt  Makefile  README.md  Rules List.txt  TOKEN_TYPES.txt  bstsymtable.c  bstsymtable.h  code_generator.c  code_generator.h  dynamic_string.c  dynamic_string.h  error.h  expression.c  expression.h  ifj_18.c  parser.c  parser.h  scanner.c  scanner.h  spooky scary skeleton.c  spooky scary skeleton.txt  stackgenerator.c  stackgenerator.h  symtable.c  symtable.h
